--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,9 @@
-isdnutils (1:3.9.20060704-3ubuntu1) feisty; urgency=low
+isdnutils (1:3.9.20060704-3.1) unstable; urgency=low
 
-  * Merge with Debian; remaining changes:
-    - isdnvboxserver: Added dependency on update-inetd.
-  * Set Ubuntu maintainer address.
+  * Non-maintainer upload.
+  * Fix FTBFS because of size_t being undeclared. (Closes: #453165)
 
- -- Matthias Klose <doko@ubuntu.com>  Wed,  7 Mar 2007 19:33:37 +0100
+ -- Philipp Kern <pkern@debian.org>  Sat, 12 Jan 2008 10:29:12 +0100
 
 isdnutils (1:3.9.20060704-3) unstable; urgency=high
 
@@ -53,12 +52,6 @@ isdnutils (1:3.9.20060704-2.3) unstable; urgency=low
    - Czech added. Closes: #391542
 
  -- Christian Perrier <bubulle@debian.org>  Thu, 18 Jan 2007 22:47:52 +0100
-
-isdnutils (1:3.9.20060704-2.2ubuntu1) feisty; urgency=low
-
-  * Add dependency on update-inetd to isdnvboxserver.
-
- -- Tollef Fog Heen <tfheen@ubuntu.com>  Thu, 14 Dec 2006 11:32:30 +0100
 
 isdnutils (1:3.9.20060704-2.2) unstable; urgency=high
 
