--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -14,8 +14,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: isdnutils 1:3.6.2005-01-03-5\n"
-"Report-Msgid-Bugs-To: ubuntu-devel-discuss@lists.ubuntu.com\n"
-"POT-Creation-Date: 2007-03-07 19:38+0100\n"
+"Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
+"POT-Creation-Date: 2008-01-12 10:05+0000\n"
 "PO-Revision-Date: 2007-01-28 13:03+0100\n"
 "Last-Translator: Martin Sin <martin.sin@seznam.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
