--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -15,8 +15,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 1:3.3-5\n"
-"Report-Msgid-Bugs-To: ubuntu-devel-discuss@lists.ubuntu.com\n"
-"POT-Creation-Date: 2007-03-07 19:38+0100\n"
+"Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
+"POT-Creation-Date: 2008-01-12 10:05+0000\n"
 "PO-Revision-Date: 2004-09-02 21:29+0200\n"
 "Last-Translator: Philippe Batailler <pbatailler@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
@@ -54,9 +54,9 @@ msgstr ""
 "Si, pour l'instant rien ne fonctionne et que vous vouliez essayer la "
 "configuration automatique, arrêtez tous les processus RNIS avec la commande "
 "« /etc/init.d/isdnutils stop », supprimez les fichiers mentionnés "
-"précédemment et relancez la configuration avec la commande « dpkg-"
-"reconfigure ipppd ». Ensuite relancez les processus RNIS avec la commande « /"
-"etc/init.d/isdnutils start »."
+"précédemment et relancez la configuration avec la commande « dpkg-reconfigure "
+"ipppd ». Ensuite relancez les processus RNIS avec la commande « /etc/init.d/"
+"isdnutils start »."
 
 #. Type: string
 #. Description
@@ -776,9 +776,9 @@ msgid ""
 msgstr ""
 "Si vous avez plusieurs cartes, donnez les numéros des cartes devant être "
 "chargées avec le microprogramme ; commencez par 1 et séparez-les par des "
-"virgules. Si vous n'avez qu'une carte, la réponse évidente est « 1 ». Si "
-"vous avez deux cartes qui ont besoin toutes deux de microprogrammes, "
-"indiquez « 1,2 »."
+"virgules. Si vous n'avez qu'une carte, la réponse évidente est « 1 ». Si vous "
+"avez deux cartes qui ont besoin toutes deux de microprogrammes, indiquez "
+"« 1,2 »."
 
 #. Type: note
 #. Description
@@ -1005,8 +1005,8 @@ msgstr "Donnez le mot de passe pour ${User}."
 #: ../isdnvboxserver.templates:8001
 msgid "Please don't use ':' in it! The way it is stored cannot handle this."
 msgstr ""
-"Veuillez ne pas utiliser de caractère « : » car la façon dont il est "
-"conservé ne le permet pas !"
+"Veuillez ne pas utiliser de caractère « : » car la façon dont il est conservé "
+"ne le permet pas !"
 
 #. Type: note
 #. Description
@@ -1105,8 +1105,8 @@ msgid ""
 "A user `vbox' was created, in group `dialout'. This is used as the ID that "
 "the vbox daemons run under."
 msgstr ""
-"Un utilisateur « vbox » a été créé dans le groupe « dialout ». Les démons "
-"vbox fonctionneront avec ses privilèges."
+"Un utilisateur « vbox » a été créé dans le groupe « dialout ». Les démons vbox "
+"fonctionneront avec ses privilèges."
 
 #. Type: note
 #. Description
@@ -1261,8 +1261,7 @@ msgstr ""
 #~ "See `man vbox.conf' for information on changing this file."
 #~ msgstr ""
 #~ "Le fichier de configuration ${OLD} est maintenant ${DIR}/.vbox.conf. "
-#~ "Veuillez consulter « man vbox.conf » si vous souhaitez modifier ce "
-#~ "fichier."
+#~ "Veuillez consulter « man vbox.conf » si vous souhaitez modifier ce fichier."
 
 #~ msgid ""
 #~ "This is the number complete with areacode, any necessary leading zeroes "
