--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+isdnutils (1:3.9.20060704-3.2) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * Added LSB formatted dependency info in init.d scripts
+    (closes: #464677, #469702)
+  * Fixed doc-base files and installation
+
+ -- Peter Eisentraut <petere@debian.org>  Fri, 04 Apr 2008 14:12:10 +0200
+
 isdnutils (1:3.9.20060704-3.1) unstable; urgency=low
 
   * Non-maintainer upload.
