--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+isdnutils (1:3.9.20060704-3.3) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Incorporate patch from Martin Guy to fix armel build (closes: #469867).
+
+ -- Colin Tuckley <colint@debian.org>  Mon, 21 Apr 2008 10:40:22 +0100
+
 isdnutils (1:3.9.20060704-3.2) unstable; urgency=low
 
   * Non-maintainer upload.
