--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: isdnutils 1:3.8.2005-12-06-4\n"
 "Report-Msgid-Bugs-To: isdnutils@packages.debian.org\n"
 "POT-Creation-Date: 2008-04-16 18:20+0200\n"
-"PO-Revision-Date: 2006-01-19 15:49+0100\n"
-"Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
+"PO-Revision-Date: 2008-07-21 16:05+0100\n"
+"Last-Translator: Martin Bagge <brother@bsnet.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -44,7 +44,6 @@ msgstr ""
 #. Type: error
 #. Description
 #: ../ipppd.templates:1001
-#, fuzzy
 msgid ""
 "If it doesn't work yet, and you want to try the automatic configuration, "
 "stop all ISDN processes (use \"/etc/init.d/isdnutils stop\"), remove the "
@@ -654,7 +653,6 @@ msgstr "Efter hur många ringsignaler ska vbox lyfta på luren?"
 #. Type: string
 #. Description
 #: ../isdnvboxserver.templates:2001
-#, fuzzy
 msgid ""
 "One ring is about 5 seconds. You can fine-tune the number of rings for "
 "certain phonenumbers manually, e.g. any salesmen you know the number of (or "
@@ -835,7 +833,6 @@ msgstr "Enhet i vboxgetty.conf kommer inte överens med devfs"
 #. Type: error
 #. Description
 #: ../isdnvboxserver.templates:12001
-#, fuzzy
 msgid ""
 "The device entry in /etc/isdn/vboxgetty.conf uses a device name that does "
 "not correspond to the current devfs usage; either a devfs (/dev/isdn/ttyIxx) "
@@ -1089,58 +1086,3 @@ msgstr ""
 
 #~ msgid "isdnvboxserver is being configured."
 #~ msgstr "isdnvboxserver konfigureras nu."
-
-# I just copy this string directly.
-# This is just to get 100% translated
-#~ msgid "Note to translators: no need to translate this, not shown to users."
-#~ msgstr "Note to translators: no need to translate this, not shown to users."
-
-#~ msgid "spool directory renamed"
-#~ msgstr "kökatalog har bytt namn"
-
-#~ msgid ""
-#~ "The spool directory `${OLDSPOOL}' has been renamed to `${NEWSPOOL}' for "
-#~ "consistency's sake. This should have no other consequences."
-#~ msgstr ""
-#~ "Kökatalogen \"${OLDSPOOL}\" har bytt namn till \"${NEWSPOOL}\" för att "
-#~ "följa reglerna. Det bör inte ge några andra konsekvenser."
-
-#~ msgid "two obsolete spool directories detected"
-#~ msgstr "två föråldrade kökataloger identifierades"
-
-#~ msgid ""
-#~ "The directories `${OLDSPOOL1}' and `${OLDSPOOL2}' (which aren't used "
-#~ "anymore in the standard configuration), and the new spool directory `"
-#~ "${NEWSPOOL}' all exist. The old directories will no longer be used; "
-#~ "please manually move any messages from there to the new directory (if "
-#~ "any), and delete the old directories."
-#~ msgstr ""
-#~ "Katalogerna \"${OLDSPOOL1}\" och \"${OLDSPOOL2}\" (som inte används "
-#~ "längre i standardkonfigurationen) och den nya kökatalogen \"${NEWSPOOL}\" "
-#~ "existerar. De gamla katalogerna kommer inte längre att användas; vänligen "
-#~ "flytta manuellt eventuella meddelanden från dem till den nya katalogen "
-#~ "och ta bort de gamla katalogerna."
-
-#~ msgid "two spool directories detected"
-#~ msgstr "två kökataloger identifierades"
-
-#~ msgid ""
-#~ "The old spool directory `${OLDSPOOL}' and the new spool directory `"
-#~ "${NEWSPOOL}' both exist. The old directory will no longer be used; please "
-#~ "manually move any messages from there to the new directory (if any), and "
-#~ "delete the old directory."
-#~ msgstr ""
-#~ "Den gamla kökatalogen \"${OLDSPOOL}\" och den nya kökatalogen "
-#~ "\"${NEWSPOOL}\" existerar. Den gamla katalogen kommer inte längre att "
-#~ "användas; vänligen flytta manuellt eventuella meddelanden från den till "
-#~ "den nya katalogen och ta bort den gamla katalogen."
-
-#~ msgid "vbox config file moved"
-#~ msgstr "konfigurationsfil för vbox flyttad"
-
-#~ msgid ""
-#~ "The configuration file `${OLD}' has been moved to `${DIR}/.vbox.conf'.  "
-#~ "See `man vbox.conf' for information on changing this file."
-#~ msgstr ""
-#~ "Konfigurationsfilen \"${OLD}\" har flyttats till \"${DIR}/.vbox.conf\". "
-#~ "Se \"man vbox.conf\" för information om hur man ändrar filen."
