--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+isdnutils (1:3.9.20060704-3.6) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Add dependencies on makedev to capiutils, ipppd and isdnvboxserver
+    (Closes: #502825, #502693)
+
+ -- Moritz Muehlenhoff <jmm@debian.org>  Mon, 20 Oct 2008 23:49:52 +0200
+
 isdnutils (1:3.9.20060704-3.5) unstable; urgency=low
 
   * Non-maintainer upload.
