--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+isdnutils (1:3.9.20060704-7) unstable; urgency=low
+
+  * Drop "set -e" in config scripts as it breaks upgrades.
+    Let's hope someone will look this in more details later on
+    Closes: #554537
+
+ -- Christian Perrier <bubulle@debian.org>  Thu, 05 Nov 2009 20:21:15 +0100
+
 isdnutils (1:3.9.20060704-6) unstable; urgency=low
 
   * QA upload
