--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+isdnutils (1:3.9.20060704-8) unstable; urgency=low
+
+  * QA upload
+  * Add sparc64 and sh4 to the architectures lists.  Closes: #549878.
+  * [Debconf translation updates]
+    - French (Christian Perrier).  Closes: #551720
+    - Galician (Marce Villarino).  Closes: #554475.
+  * Relibtoolize.  Closes: #560560. 
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 31 Jan 2010 16:52:48 +0000
+
 isdnutils (1:3.9.20060704-7) unstable; urgency=low
 
   * Drop "set -e" in config scripts as it breaks upgrades.
