--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+isdnutils (1:3.9.20060704-9) unstable; urgency=low
+
+  * QA upload
+  * Add va_list.dpatch to the list of patches to apply.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 01 Feb 2010 22:09:24 +0100
+
 isdnutils (1:3.9.20060704-8) unstable; urgency=low
 
   * QA upload
