--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+isdnutils (1:3.9.20060704+dfsg.1-2) unstable; urgency=low
+
+  * QA upload.
+  * Refresh patches so they apply cleanly.
+  * Update ppp-2.4.4.patch to only build the plugin for version 2.4.4. There
+    is no need to support older versions of ppp from pre-etch times.
+  * Add ppp-2.4.5.patch to support ppp 2.4.5.
+  * As we build pppdcapiplugin for ppp 2.4.4 and 2.4.5, change the dependency
+    to ppp (>= 2.4.4), ppp (<< 2.4.6).
+  * Drop old Conflicts and Replaces which are no longer necessary.
+
+ -- Michael Biebl <biebl@debian.org>  Tue, 27 Jul 2010 21:26:45 +0200
+
 isdnutils (1:3.9.20060704+dfsg.1-1) unstable; urgency=low
 
   * QA upload
