--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+isdnutils (1:3.9.20060704+dfsg.1-3) unstable; urgency=low
+
+  * QA upload.
+  * Replace tcl8.3-dev Build Dependency with tcl-dev (Closes: #590651). 
+
+ -- Martijn van Brummelen <martijn@brumit.nl>  Fri, 10 Sep 2010 11:33:56 +0200
+
 isdnutils (1:3.9.20060704+dfsg.1-2) unstable; urgency=low
 
   * QA upload.
