--- a/FAQ/README
+++ b/FAQ/README
@@ -2,11 +2,15 @@ In this directory you find the FAQ for isdn4linux.
 It contains answers for those questions that are frequently asked in the
 mailing list/news group for isdn4linux (and some more).
 
-The FAQ is now only available in English. Its source code is formatted in
-SGML, which can easily be converted by using:
-sgml2txt i4lfaq.sgml
+The FAQ is now maintained in English. A German version exists, but updates
+to the English version are only translated on a best effort basis.
+To see the latest information always use the English version.
+
+The source code of the FAQ is formatted in SGML, which can easily be
+converted by using:
+   sgml2txt i4lfaq.sgml
 or
-sgml2html i4lfaq.sgml
+   sgml2html i4lfaq.sgml
 
 To download converted versions, or see the latest version online,
 visit the homepage of the FAQ:
@@ -22,7 +26,7 @@ http://www.isdn4linux.de/faq/
 
 "_example" and "_howto" contain postings from the mailing list/news group that
 appeared helpful/interesting to me. They may be helpful to you, but be careful:
-THEY MAY BE OUTDATED BY NOW!
+THEY ARE ALMOST SURELY OUTDATED BY NOW!
 
 See the FAQ for more information about the author of the FAQ.
 
