--- a/isdnlog/isdnlog/ChangeLog
+++ b/isdnlog/isdnlog/ChangeLog
@@ -1,3 +1,36 @@
+2004-09-29  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* isdnlog.c (init_variables): Set ignoreCLIP to 0.
+	* isdnlog.c (set_options): Set ignoreCLIP from -Ux[:y] option.
+	* isdnlog.c (read_param_file): Set ignoreCLIP from "ignoreCOLP=x[:y]",
+	use y value if present, x otherwise.
+	* processor.c (decode): Use ignoreCLIP instead of ignoreCOLP for
+	control of IE 0x6c (calling party number) handling.
+
+	* processor.c (decode): Changes for IE 0x6c when IE is given twice,
+	e.g. source number from user and from network on an incoming call
+	(ETS 300 092-1 Annex B).  Use network provided number as source
+	number (index [CALLING] for .onum and other in call[chan]) regardless
+	ignoreCLIP setting.  ignoreCLIP now only controls the storage of the
+	user provided number to [CLIP].  The old effect of ignoreCLIP was to
+	look at the first IE only.  Changed the calls of buildnumber and vnum
+	in case of number order network/user, so that [CLIP] is set right.
+	If there is an alias for the CLIP number, show alias and number in
+	parentheses (new) in "CLIP ..." notice.
+
+2004-09-05  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* isdnlog.h (ignore_unknown_PD): New global variable.
+	* isdnlog.c (read_param_file): Store ignoreUPD setting in parameter
+	file to ignore_unknown_PD.
+	* processor.c (processctrl): Show warning "Unexpected discriminator"
+	only if not suppressed by ignore_unknown_PD.
+
+2004-08-25  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* processor.c (processctrl): Removed declaration of moreinfo, it is
+	declared in isdnlog.h.
+
 2004-07-24  Tobias Becker  <tobiasb@isdn4linux.de>
 
 	* start_prog.c (Get_Opts): The call duration \$5 is now 0 until
