--- a/isdnlog/tools/ChangeLog
+++ b/isdnlog/tools/ChangeLog
@@ -1,3 +1,54 @@
+2004-11-09  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* telnum.h (TN_MAX_AREA_LEN): Increased length of area code from 10
+	to 16.  This allows correct processing of long special numbers, which
+	are stored entirely in .area of a TELNUM.
+
+2004-10-04  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* holiday.c (isDay): Removed restriction that workday (W) must not be
+	holiday (H) too.  See rate-files(5) for order of priority.
+
+2004-09-29  Tobias Becker  <tobiasb@isdn4linux.de>
+
+        * tools.h (ignoreCLIP): New global variable, similiar ignoreCOLP.
+
+2004-09-27  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* isdnrate.c (printTable): Check provider and price (new) when
+	comparing provider rankings.
+
+2004-09-07  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* isdnrate.c (Provider): Rewrote function, returned string has
+	now always the length WIDTH.  The providername is truncated if
+	necessary. 
+
+	* isdnrate.c (printTable): Allow the first provider in ratefile
+	(prefix=0) to appear in first hour range of day without producing
+	wrong output.
+
+	* isdnrate.c (printTable): Compare all providers, not only the best
+	one when computing hour ranges in table mode (-T).
+
+	* isdnrate.c (printTable): Display hour range ending at midnight
+	as ".. 23:59" instead of ".. -1:59".
+
+	* isdnrate.c (printTable): Replaced double2str by printRate, so
+	U: tag from ratefile is also used in table mode.
+
+	* isdnrate.c (print_header): Do not print date in table mode.
+
+2004-09-05  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* tools.h (CONF_ENT_IGNOREUPD): New entry "IGNOREUPD" in parameter
+	file of isdnlog, entry name defined here.
+
+2004-08-25  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* rate.c (initRate, get_area1): Put a minimal statement after label
+	at end of block.
+
 2004-07-24  Tobias Becker  <tobiasb@isdn4linux.de>
 
 	* isdnconf.c (Set_Globals): Store `REPOTIONS' config file entry to
