--- a/isdnlog/README
+++ b/isdnlog/README
@@ -1,3 +1,9 @@
+| Vorbemerkung:
+| Diese Datei wurde inhaltlich zuletzt im Mai 2001 bearbeitet.  Spätere
+| Änderungen an isdnlog & Co. sind daher nur in den man-Pages beschrieben.
+| Tobias Becker <tobiasb@isdn4linux.de>, Maintainer im Dezember 2004.
+
+
 ISDNLOG - Version 4.50  -  				26-Feb-2001
 
 
