--- a/isdnlog/isdnlog/ChangeLog
+++ b/isdnlog/isdnlog/ChangeLog
@@ -1,3 +1,13 @@
+2005-02-23  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* isdnlog.c (read_param_file): Store value for skipProv from
+	parameter file to param_skipprov, a new variable at file scope.
+	* isdnlog.c (main): Call add_skipped_provider with param_skipprov
+	before initRate.  Added debug info about list of skipped providers,
+	output is classified as PRT_DEBUG_GENERAL which seems to be almost
+	unused so far.  After initRate and debug output, the list of
+	skipped providers is freed.
+
 2005-01-02  Tobias Becker  <tobiasb@isdn4linux.de>
 
 	* processor.c (buildnumber): Repeat test for special number and
