--- a/isdnlog/tools/ChangeLog
+++ b/isdnlog/tools/ChangeLog
@@ -1,3 +1,31 @@
+2005-02-23  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* rate_skip.c, rate_skip.h: This implements the new feature of
+	provider skipping.  For end user information there is a new
+	manual page rate.conf(5), the interface is described in rate_skip.c.
+
+	* rate.c (initRate): Call add_skipped_provider for Q: tags in
+	rate.conf.  Moved parsing of P: tag from rate-file to new function
+	parse_P.  Added provider skipping for rate-file reading and parsing.
+
+	* tools.h (CONF_ENT_SKIPPROV): New constant for name of skipProv
+	entry in parameter file.
+
+2005-01-12  Tobias Becker  <tobiasb@isdn4linux.de>
+
+	* dest.c (getDest): Do not shorten the given number to less than one
+	character while searching for destination database entries.  This
+	fixes wrong output like "+8 => +852 17 - Hong Kong Mobilfunk (HK) ..."
+	for "isdnrate -N +8".
+
+	* tools.c (vnum): The call of normalizeNumber may return UNKNOWN,
+	if there is no entry found in the destination database at all.  This
+	occurs for example for an incomplete countrycode like +8.  If this
+	happens, "+8" is not stored to the TELNUM number and as a result, the
+	string returned by vnum did not contain any information about +8.
+	Now the unformatted number from call[chan].num[who] is copied in this
+	case.  Revealed by "isdnlog -22 ..." and dialing digit per digit.
+
 2005-01-02  Tobias Becker  <tobiasb@isdn4linux.de>
 
 	* rate.h (getSpecialLen): New rate data query function like getSpecial.
