--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+isdnutils (1:3.9.20060704+dfsg.2-2) unstable; urgency=low
+
+  * QA upload
+  * Fix short diff context in ippd-ms-chap.patch which caused lenny's
+    patch command (and dpkg-source) to reject it
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 10 Oct 2010 00:07:00 +0100
+
+isdnutils (1:3.9.20060704+dfsg.2-1) unstable; urgency=low
+
+  * QA upload
+  * Restore ipppd, replacing the GPL-licenced code (Closes: #599627)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 09 Oct 2010 19:14:37 +0100
+
 isdnutils (1:3.9.20060704+dfsg.1-3) unstable; urgency=low
 
   * QA upload.
