--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+isdnutils (1:3.9.20060704+dfsg.2-3) unstable; urgency=low
+
+  * QA upload
+  * Rebuild including the architecture-indepdendent binaries
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 14 Oct 2010 03:13:14 +0100
+
 isdnutils (1:3.9.20060704+dfsg.2-2) unstable; urgency=low
 
   * QA upload
