--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+isdnutils (1:3.9.20060704+dfsg.2-4) unstable; urgency=low
+
+  * QA upload
+  * Add va_list.patch to debian/patches/series (Closes: #600037).
+
+ -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Fri, 15 Oct 2010 11:27:39 +0900
+
 isdnutils (1:3.9.20060704+dfsg.2-3) unstable; urgency=low
 
   * QA upload
