--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+isdnutils (1:3.9.20060704+dfsg.2-8) unstable; urgency=low
+
+  * remove calls to MAKEDEV from *.postinst and init.d.functions
+    they should no longer be necessary. Closes: #607387
+  * debian/po: run debconf-updatepo to update po files
+
+ -- Rolf Leggewie <foss@rolf.leggewie.biz>  Mon, 27 Dec 2010 12:54:01 +0800
+
 isdnutils (1:3.9.20060704+dfsg.2-7) unstable; urgency=medium
 
   * debian/*.postinst: hardcode path to MAKEDEV
